# nl2sql

./: .env.example  .gitignore  AGENTS.md  README.md  claude-progress.txt  docker-compose.yml  feature_list.json  init.sh  progress.md  progress.txt  pyproject.toml  requirements.txt  test_minimax.py  test_usage.py
.agent-harness/: README.md
backend/: requirements.txt
config/: field_descriptions.json  security_policy.json  semantic_mappings.json  settings.yaml
docs/: core-modules-1-phases.md  core-modules-1.md  core-modules-2-phases.md  core-modules-2.md  core-modules-3.md  core-modules-4-phases.md  core-modules-4.md  core-modules-5-phases.md  core-modules-5.md  core-modules-6-phases.md  core-modules-6.md  implementation-plan-cli-api-phases.md  implementation-plan-cli-api-testing.md  implementation-plan-cli-api.md  nl2sql-core-modules.md  nl2sql-ui-best-practices.md  orchestrator-design-phases.md  orchestrator-design.md  plan-show-thinking.md  technical-architecture.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json
prompts/: coding_agent.md  initializer_agent.md
src/: __init__.py  config.py  main.py
tests/: test_api.py  test_cli.py  test_config.py  test_core_types.py  test_execution_phase1.py  test_execution_phase2.py  test_execution_phase3.py  test_explanation_integration.py  test_explanation_phase1.py  test_explanation_phase2.py  test_explanation_phase3.py  test_explanation_phase4.py  test_generation_phase1.py  test_generation_phase2.py  test_generation_phase3.py  test_orchestrator_integration.py  test_orchestrator_phase2.py  (+11 more)
(+71 files in other folders)
