[project]
name = "nl2sql"
version = "0.1.0"
description = "基于 LangChain 的自然语言转 SQL 查询项目"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langgraph>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlparse>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
mysql = ["pymysql>=1.1.0"]
postgres = ["psycopg2-binary>=2.9.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
